Generate index from book text files
This index will be used with the built-in search engine, to speed it up. We're using fuse.js.

--- a/convert/package.json
+++ b/convert/package.json
@@ -31,8 +31,10 @@
     "commander": "^8.0.0",
     "dayjs": "^1.10.6",
     "fs-extra": "^10.0.0",
+    "fuse.js": "^6.4.6",
     "iconv-lite": "^0.6.3",
     "jsdom": "^16.6.0",
+    "tmp": "^0.2.1",
     "xmldom": "^0.6.0",
     "xpath": "^0.0.32"
   },
