--- a/convert/package.json
+++ b/convert/package.json
@@ -13,7 +13,8 @@
     "self-anchor-headings": "npm run start -- self-anchor-headings ../demos/action-for-heroes/text ../demos/action-for-heroes/text",
     "make-about-page": "npm run start -- make-about-page ../experiments/Action_for_heroes_orig/content.opf ../demos/action-for-heroes/about.html",
     "shift-clips": "npm run start -- shift-clips ../demos/mobydick/smil/chapter_001_overlay.smil ../demos/mobydick/ch1.shifted.smil -a -24.5",
-    "convert": "npm run start -- convert ../experiments/action-for-heroes-epub ../demos/action-for-heros-2"
+    "convert": "npm run start -- convert ../experiments/action-for-heroes-epub ../demos/action-for-heros-2",
+    "copyAudioBack": "cp ../demos/audio/* ../demos/action_for_heroes_epub/audio"
   },
   "keywords": [],
   "author": "",
