--- a/convert/package.json
+++ b/convert/package.json
@@ -14,7 +14,8 @@
     "make-about-page": "npm run start -- make-about-page ../experiments/Action_for_heroes_orig/content.opf ../demos/action-for-heroes/about.html",
     "shift-clips": "npm run start -- shift-clips ../demos/mobydick/smil/chapter_001_overlay.smil ../demos/mobydick/ch1.shifted.smil -a -24.5",
     "convert": "npm run start -- convert ../experiments/action-for-heroes-epub ../demos/action-for-heros-2",
-    "copyAudioBack": "cp ../demos/audio/* ../demos/action_for_heroes_epub/audio"
+    "copyAudioBack": "cp ../demos/audio/* ../demos/action_for_heroes_epub/audio",
+    "gulp": "gulp"
   },
   "keywords": [],
   "author": "",
@@ -40,6 +41,7 @@
     "fuse.js": "^6.4.6",
     "iconv-lite": "^0.6.3",
     "jsdom": "^16.6.0",
+    "pretty": "^2.0.0",
     "tmp": "^0.2.1",
     "vtt-creator": "^1.1.1",
     "winston": "^3.3.3",
