--- a/convert/package.json
+++ b/convert/package.json
@@ -34,6 +34,7 @@
     "@ffprobe-installer/ffprobe": "^1.2.0",
     "chardet": "^1.3.0",
     "commander": "^8.0.0",
+    "css": "^3.0.0",
     "dayjs": "^1.10.6",
     "extract-zip": "^2.0.1",
     "fluent-ffmpeg": "^2.1.2",
